[gd_scene load_steps=3 format=2]

[ext_resource path="res://Themes/DataText.tres" type="Theme" id=1]
[ext_resource path="res://ReusableUI/VitalsCard/VitalsCard.gd" type="Script" id=2]

[node name="VitalsCard" type="VBoxContainer"]
margin_top = 295.0
margin_right = 459.0
margin_bottom = 411.0
theme = ExtResource( 1 )
custom_constants/separation = 0
script = ExtResource( 2 )

[node name="Vitals" type="Label" parent="."]
margin_right = 459.0
margin_bottom = 26.0
text = "Vitals"
align = 1

[node name="HealthRow" type="HBoxContainer" parent="."]
margin_top = 26.0
margin_right = 459.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="HealthRow"]
margin_right = 100.0
margin_bottom = 26.0
rect_min_size = Vector2( 100, 0 )
text = "Health"

[node name="Bar" type="ProgressBar" parent="HealthRow"]
self_modulate = Color( 0.0411987, 0.878906, 0.132823, 1 )
margin_left = 104.0
margin_right = 459.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
percent_visible = false

[node name="Value" type="Label" parent="HealthRow/Bar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -51.805
margin_top = -13.085
margin_right = 48.195
margin_bottom = 17.915
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 2
text = "0 / 0"
align = 1

[node name="MoraleRow" type="HBoxContainer" parent="."]
margin_top = 52.0
margin_right = 459.0
margin_bottom = 78.0

[node name="Label" type="Label" parent="MoraleRow"]
margin_right = 100.0
margin_bottom = 26.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 2
text = "Morale"

[node name="Bar" type="ProgressBar" parent="MoraleRow"]
self_modulate = Color( 0.824219, 0.0547333, 0.0547333, 1 )
margin_left = 104.0
margin_right = 459.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 1
percent_visible = false

[node name="Value" type="Label" parent="MoraleRow/Bar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.305
margin_top = -13.085
margin_right = 47.695
margin_bottom = 17.915
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 2
text = "0 / 0"
align = 1

[node name="WeightRow" type="HBoxContainer" parent="."]
margin_top = 78.0
margin_right = 459.0
margin_bottom = 104.0

[node name="Label" type="Label" parent="WeightRow"]
margin_right = 100.0
margin_bottom = 26.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 2
text = "Weight"

[node name="Bar" type="ProgressBar" parent="WeightRow"]
self_modulate = Color( 0.027451, 0.196078, 0.968627, 1 )
margin_left = 104.0
margin_right = 459.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
percent_visible = false

[node name="Value" type="Label" parent="WeightRow/Bar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.305
margin_top = -13.085
margin_right = 47.695
margin_bottom = 17.915
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 2
text = "0 / 0"
align = 1
